1999-11-09  Jason Molenda  (jsm@bugshack.cygnus.com)

	* config.guess:  Copy current top-level config.guess down to
	the dejagnu/ subdir.  The dejagnu automake configuation should
	probably be changed to grab the top-level config.guess instead
	of the random one in this dir.

1999-11-04  Nick Clifton  <nickc@cygnus.com>

	* baseboards/arm-sim.exp: Underscore no longer needed for arm-pe
	ports.

Tue Oct 12 11:44:53 1999  Andrew Cagney  <cagney@b1.cygnus.com>

	* lib/libgloss.exp (process_multilib_options): Add support for
 	generic gdb variable option - ``gdb:VARIABLE=VALUE''.

1999-09-28  Angela Marie Thomas <angela@cygnus.com>

	* lib/rsh.exp (rsh_download, rsh_upload): Use rcp_prog if set.

1999-09-15  Stan Shebs  <shebs@andros.cygnus.com>

	* baseboards/d10v.exp: Request disable of X- and Z-packets
	from GDB, all D10V boards respond incorrectly to these.

1999-08-31  Doug Evans  <devans@casey.cygnus.com>

	* lib/target.exp (default_link): New local proc only--Ls.
	Use it to pick out -L arguments in $ldflags.
	Strip -Wl, from $ldscript.

1999-07-12  Felix Lee  <flee@cygnus.com>

	* config/i960.exp: complain if 'sx' not found.

1999-07-12  Drew Moseley  <dmoseley@cygnus.com>

	* baseboards/strongarm-cygmon.exp: Rename the StrongARM boards as
	follows:
	                EBIX-DB           -> SA-IOP
	                EBSA285           -> EBSA-285
	                BRUTUS            -> SA1100DP
	                SA1100-MULTIMEDIA -> SA1100MM

1999-06-08  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* lib/framework.exp (record_test): Remove weird recursion and
	make sure exit_status is properly set to 1.

1999-06-08  Felix Lee  <flee@cygnus.com>

	* lib/telnet.exp (telnet_open): need to match '(Advanced or Simple)'

1999-06-06  Felix Lee  <flee@cygnus.com>

	* lib/utils.exp (getdirs): When -all, return parents of
	subdirectories too.

1999-06-03  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* lib/remote.exp (standard_send): Add -- to protect strings that