@@ -1,3 +1,8 @@
+1999-12-14  Geoff Keating  <geoffk@cygnus.com>
+
+	* baseboards/rom68k-idp.exp: Don't pass -nostdlib to the IDP
+	boards when using ELF, they need crtbegin and crtend.
+
 1999-11-09  Jason Molenda  (jsm@bugshack.cygnus.com)
 
 	* config.guess:  Copy current top-level config.guess down to
